# nipart

./: .gitignore  .licenserc.yaml  .rustfmt.toml  Cargo.toml  DEVEL.md  README.md  TODO  TODO.md  pyproject.toml
docs/: book.toml
packaging/: nipart-wait-online.service  nipart.service
src/cli/: Cargo.toml  apply.rs  commit.rs  diff.rs  error.rs  gen_cmd.rs  main.rs  merge.rs  nipc.rs  show.rs  state.rs  wait_online.rs  wifi.rs
src/daemon/: Cargo.toml  DESIGN.md  api.rs  api_listener.rs  apply.rs  commander.rs  daemon.rs  event.rs  link_event.rs  lock.rs  logger.rs  main.rs  nipartd.rs  plugin.rs  query.rs  session_queue.rs  switch.rs  task.rs  udev.rs  uuid.rs  wait_online.rs  workflow.rs
src/daemon/commander/: commander_thread.rs  commit.rs  dhcp.rs  log_level.rs  mod.rs  plugin.rs  plugin_info.rs  post_start.rs  session_queue.rs  state.rs  task.rs  workflow.rs
src/daemon/conf/: conf_manager.rs  conf_worker.rs  mod.rs
src/daemon/dhcp/: dhcp_manager.rs  dhcp_worker.rs  mod.rs
src/daemon/event/: event_manager.rs  event_worker.rs  mod.rs
src/daemon/monitor/: mod.rs  monitor_manager.rs  monitor_worker.rs
src/daemon/plugin/: mod.rs  plugin_exec.rs  plugin_manager.rs  plugin_worker.rs
src/derive/: Cargo.toml  lib.rs
src/lib/: Cargo.toml  client.rs  commit.rs  config.rs  connection.rs  dhcp.rs  error.rs  event.rs  ipc.rs  lib.rs  lock.rs  logging.rs  monitor.rs  nipart_uuid.rs  plugin.rs  plugin_common.rs  plugin_external.rs  plugin_ipc.rs  plugin_native.rs  plugin_trait.rs  query.rs  result.rs  state.rs  state_options.rs  uuid.rs  yaml.rs
src/lib/event/: commander.rs  events.rs  mod.rs  plugin_common.rs  user.rs
src/lib/nmstate/: iface.rs  iface_state.rs  iface_trait.rs  iface_type.rs  ip.rs  mod.rs  net_state.rs  route.rs  serializer.rs  state_options.rs  trigger.rs  value.rs  version.rs
src/lib/nmstate/gen_diff/: inter_iface.rs  mod.rs  net_state.rs  route.rs
src/lib/nmstate/ifaces/: base.rs  bond.rs  bridge_vlan.rs  dummy.rs  ethernet.rs  inter_ifaces.rs  linux_bridge.rs  loopback.rs  mod.rs  ovs_bridge.rs  ovs_iface.rs  unknown.rs  vlan.rs  wifi.rs  wireguard.rs
src/lib/nmstate/merged/: base_iface.rs  controller.rs  ethernet.rs  iface.rs  inter_iface.rs  ip.rs  loopback.rs  mod.rs  net_state.rs  route.rs  wifi.rs
src/lib/nmstate/revert/: iface.rs  mod.rs  net_state.rs  value.rs
src/lib/nmstate/unit_tests/: ip.rs  loopback.rs  mod.rs  wifi.rs
src/lib/no_daemon/: apply.rs  base_iface.rs  bond.rs  dhcp.rs  ethernet.rs  iface.rs  inter_ifaces.rs  ip.rs  linux_bridge.rs  linux_bridge_vlan.rs  mod.rs  query.rs  route.rs  vlan.rs  watcher.rs  wireguard.rs
src/lib/no_daemon/ovs/: db.rs  json_rpc.rs  method.rs  mod.rs  operation.rs  query.rs
src/lib/no_daemon/wifi/: apply.rs  bss.rs  dbus.rs  dbus_macros.rs  interface.rs  mod.rs  network.rs  query.rs  scan.rs  wifi_nispor.rs
src/lib/plugin/: Cargo.toml  client.rs  info.rs  listener.rs  mod.rs  plugin_trait.rs
src/lib/schema/: deserializer.rs  iface.rs  iface_state.rs  iface_trait.rs  iface_type.rs  ip.rs  link_state.rs  mod.rs  net_state.rs  route.rs  state_options.rs  trigger.rs  value.rs  wait_online.rs
src/lib/schema/gen_diff/: base_iface.rs  inter_iface.rs
src/lib/schema/ifaces/: bond.rs  dummy.rs  ethernet.rs  inter_ifaces.rs  linux_bridge.rs  loopback.rs  ovs_bridge.rs  ovs_iface.rs  unknown.rs  vlan.rs  wifi.rs  wireguard.rs
src/lib/schema/merged/: base_iface.rs  controller.rs  ethernet.rs  iface.rs  inter_iface.rs  ip.rs  loopback.rs  net_state.rs  route.rs  wifi.rs
src/lib/schema/revert/: iface.rs  value.rs
src/lib/schema/unit_tests/: wifi.rs
src/lib/state/: copy_nmstate_code.py  deserializer.rs  dispatch.rs  dns.rs  error.rs  hostname.rs  ieee8021x.rs  iface.rs  iface_state.rs  iface_trait.rs  iface_type.rs  ip.rs  json.rs  lib.rs  lldp.rs  merge_state.rs  mod.rs  mptcp.rs  net_state.rs  nipart.rs  ovn.rs  ovs.rs  revert.rs  route.rs  route_rule.rs  value.rs
src/lib/state/gen_diff/: base_iface.rs  inter_iface.rs  mod.rs  net_state.rs
src/lib/state/ifaces/: base.rs  bond.rs  bridge_vlan.rs  dummy.rs  ethernet.rs  ethtool.rs  hsr.rs  infiniband.rs  inter_ifaces.rs  inter_ifaces_controller.rs  ipsec.rs  linux_bridge.rs  loopback.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  ovs.rs  sriov.rs  unknown.rs  vlan.rs  vrf.rs  vxlan.rs  xfrm.rs
src/lib/state/merged/: iface.rs  inter_iface.rs  mod.rs  net_state.rs
src/lib/state/not_synced/: merge_state.rs  mod.rs  net_state.rs  ovn.rs
src/lib/state/ovsdb/: apply.rs  db.rs  global_conf.rs  json_rpc.rs  show.rs
src/lib/state/query_apply/: base.rs  bond.rs  dispatch.rs  dns.rs  ethernet.rs  hostname.rs  hsr.rs  iface.rs  infiniband.rs  inter_ifaces.rs  ip.rs  ipsec.rs  linux_bridge.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  mptcp.rs  ovn.rs  ovs.rs  route.rs  route_rule.rs  sriov.rs  vlan.rs  vrf.rs  vxlan.rs
src/lib/state/revert/: base_iface.rs  dns.rs  hostname.rs  iface.rs  net_state.rs  ovn.rs  ovsdb.rs  route.rs  route_rule.rs
src/lib/state/revert/ifaces/: base.rs  ethernet.rs  iface.rs  inter_ifaces.rs
src/lib/state/statistic/: net_state.rs
src/plugin-demo/: Cargo.toml  main.rs  plugin.rs
src/plugin_baize/: Cargo.toml  baize.rs  lib.rs  link.rs  plugin.rs
src/plugin_cody/: Cargo.toml  cody.rs
src/plugin_conman/: Cargo.toml  plugin_conman.rs
src/plugin_demo/: Cargo.toml  main.rs
src/plugin_foo/: Cargo.toml  plugin_foo.rs
src/plugin_mozim/: Cargo.toml  lib.rs  plugin.rs  worker.rs
src/plugin_nispor/: Cargo.toml  apply.rs  base_iface.rs  bond.rs  error.rs  ethernet.rs  ethtool.rs  hostname.rs  iface.rs  infiniband.rs  ip.rs  lib.rs  linux_bridge.rs  linux_bridge_port_vlan.rs  mac_vlan.rs  macsec.rs  mptcp.rs  nispor.rs  plugin.rs  plugin_nispor.rs  route.rs  route_rule.rs  show.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
src/plugin_nmstate/: Cargo.toml  plugin_nmstate.rs
src/plugin_sima/: Cargo.toml  lib.rs  plugin.rs  repo.rs  state.rs
src/plugin_smith/: Cargo.toml  lib.rs  plugin.rs
tests/: bond_test.py  cli_test.py  conftest.py  daemon_connection_test.py  linux_bridge_test.py  run-tests.sh  (+5 more)
(+52 files in other folders)
