[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/daemon",
    "src/lib",
    "src/plugin_baize",
    "src/plugin_mozim",
    "src/plugin_nispor",
    "src/plugin_sima",
    "src/plugin_demo",
]

[workspace.package]
version = "0.1.0"
authors = ["Gris Ge"]
description = "Linux Network Management Tool"
documentation = "https://github.com/nispor/nipart"
edition = "2021"
license = "Apache-2.0"
# Abstract Unix socket need 1.70.0
# Async trait need 1.75.0
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0.144", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.87"
serde_yaml = "0.9.27"
uuid = { version = "1.6.1", default-features = false, features = ["std", "v7"] }
futures = {version = "0.3.29", features = [ "std" ] }
clap = { version = "4.4" }
#nispor = { version = "1.2", git = "https://github.com/nispor/nispor" }
nispor = { version = "1.2", path = "../nispor/src/lib" }

[workspace.dependencies.tokio]
version ="1.35.0"
features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"]

[workspace.dependencies.tokio-util]
version ="0.7.0"
features = ["time"]

[workspace.dependencies.nix]
version = "0.26.2"
default-features = false
features = ["feature", "hostname"]

[workspace.dependencies.mozim]
version = "0.2.2"

[workspace.dependencies.rtnetlink]
version = "0.14.1"

[workspace.dependencies.netlink-sys]
version = "0.8.5"

[workspace.dependencies.netlink-proto]
version = "0.11.3"

[workspace.dependencies.netlink-packet-core]
version = "0.7.0"

[workspace.dependencies.netlink-packet-route]
version = "0.19.0"

[workspace.dependencies.futures_channel]
version = "0.3.30"

[workspace.dependencies.gix]
version = "0.63.0"
