[package]
name = "nipc"
version = "1.0.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Command line tool for Nipart"
homepage = "https://github.com/nispor/nipart"
repository = "https://github.com/nispor/nipart"
keywords = ["network"]
categories = ["network-programming", "os"]

[[bin]]
name = "nipc"
path = "nipc.rs"

[dependencies]
serde = "1.0.138"
nipart = {path = "../lib"}
tokio = { version = "1.19.2", features = ["rt", "net", "io-util"] }
clap = "3.2.8"
serde_yaml = "0.8.25"
log = "0.4.17"
env_logger = "0.9.0"
