[package]
name = "nipart-cli"
version.workspace = true
authors.workspace = true
description = "The command line client for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
nipart = { path = "../lib", version = "0.1" }
clap = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "nipc"
path = "nipc.rs"
