[package]
name = "nipartd"
version.workspace = true
authors.workspace = true
description = "The daemon of nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
nipart = { path = "../lib", version = "0.1" }
futures = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "nipartd"
path = "nipartd.rs"
