[package]
name = "nipart"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lib]
name = "nipart"
path = "lib.rs"
