[package]
name = "nipart"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nipart_derive = { "path" = "../derive" }

env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
mozim = { workspace = true, features = ["netlink"] }
nispor = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
rtnetlink = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
wl-nl80211 = { workspace = true }
zbus = { workspace = true }
zvariant = { workspace = true }

[lib]
name = "nipart"
path = "lib.rs"
