[package]
name = "nipart-plugin-baize"
version.workspace = true
authors.workspace = true
description = "The baize monitor plugin for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rtnetlink = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-proto = { workspace = true }
netlink-sys = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
nipart = { path = "../lib", version = "0.1" }
nispor = { workspace = true }


[lib]
path = "lib.rs"
