[package]
name = "nipart-plugin-cody"
version.workspace = true
authors.workspace = true
description = "The cody plugin for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nipart = { path = "../lib", version = "0.1" }

[[bin]]
name = "nipart_plugin_cody"
path = "cody.rs"
