[package]
name = "nipart_plugin_conman"
version = "1.0.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Connection Management Plugin of Nipart Daemon"
homepage = "https://github.com/nispor/nipart"
repository = "https://github.com/nispor/nipart"
keywords = ["network"]
categories = ["network-programming", "os"]

[[bin]]
name = "nipart_plugin_conman"
path = "plugin_conman.rs"

[dependencies]
serde = "1.0"
nipart = {path = "../lib"}
tokio = { version = "1.3", features = ["rt", "net", "io-util"]}
serde_yaml = "0.8"
