[package]
name = "nipart-plugin-demo"
version.workspace = true
authors.workspace = true
description = "The demo plugin for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
nipart = { path = "../lib", version = "0.1" }

[[bin]]
name = "nipart_plugin_demo_external"
path = "main.rs"
