[package]
name = "nipart-plugin-mozim"
version.workspace = true
authors.workspace = true
description = "The mozim DHCP plugin for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
nipart = { path = "../lib", version = "0.1" }

[lib]
path = "lib.rs"
