[package]
name = "nipart-plugin-nispor"
version.workspace = true
authors.workspace = true
description = "The nispor plugin for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
nispor = { workspace = true }
nix = { workspace = true }
nipart = { path = "../lib", version = "0.1" }

[lib]
path = "lib.rs"
