[package]
name = "nipart_plugin_nmstate"
version = "1.0.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Nmstate Plugin of Nipart Daemon"
homepage = "https://github.com/nispor/nipart"
repository = "https://github.com/nispor/nipart"
keywords = ["network"]
categories = ["network-programming", "os"]

[[bin]]
name = "nipart_plugin_nmstate"
path = "plugin_nmstate.rs"

[dependencies]
nipart = {path = "../lib"}
tokio = { version = "1.3", features = ["rt", "net", "io-util"]}
nmstate = { path = "/home/fge/Source/nmstate/rust/src/lib", version = "2.1.2" }
async-trait = "0.1.56"
