[package]
name = "nipart-plugin-sima"
version.workspace = true
authors.workspace = true
description = "The network config tracking plugin for nipart"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
nipart = { path = "../lib", version = "0.1" }
nispor = { workspace = true }

[lib]
path = "lib.rs"
